# easynav_playground_kobuki

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
launch/: playgorund_multirobot_kobuki.launch.py  playground_kobuki.launch.py  rviz_namespaced.launch.py
maps/: home.map
params/: kobuki.params.yaml
rviz/: nav2_namespaced_view.rviz
